--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
                 { hanzi: "可以", pinyin: "kěyǐ", english: "good/okay" },
                 { hanzi: "不错", pinyin: "búcuò", english: "pretty good" },
                 { hanzi: "先...然后", pinyin: "xiān...ránhòu", english: "first...then" },
-                { hanzi: "有点儿", pinyin: "yǒu diǎnr", english: "a little bit" }
+                { hanzi: "有点儿", pinyin: "yǒu diǎnr", english: "a little bit" },
+                { hanzi: "就是", pinyin: "jiùshì", english: "but, however" }
+
             ],
             C3: [
                 { hanzi: "胖", pinyin: "pàng", english: "fat" },
@@ -293,7 +295,9 @@
                 { hanzi: "所以", pinyin: "suǒyǐ", english: "so" },
                 { hanzi: "准备", pinyin: "zhǔnbèi", english: "to prepare" },
                 { hanzi: "起床", pinyin: "qǐchuáng", english: "to get up" },
-                { hanzi: "课", pinyin: "kè", english: "lesson" }
+                { hanzi: "课", pinyin: "kè", english: "lesson" },
+                { hanzi: "公园", pinyin: "gōngyuán", english: "park" }
+
             ],
             C4: [
                 { hanzi: "旅游", pinyin: "lǚyóu", english: "to travel" },
@@ -309,8 +313,10 @@
                 { hanzi: "欢迎", pinyin: "huānyíng", english: "to welcome" },
                 { hanzi: "次", pinyin: "cì", english: "time (measure word)" },
                 { hanzi: "一定", pinyin: "yídìng", english: "certainly" },
+                { hanzi: "还", pinyin: "hái", english: "still" },
                 { hanzi: "要", pinyin: "yào", english: "to want to, to need" },
-                { hanzi: "别/不要...了", pinyin: "bié/búyào...le", english: "stop doing" }
+                { hanzi: "别/不要...了", pinyin: "bié/búyào...le", english: "stop doing" },
+                { hanzi: "过", pinyin: "guò", english: "to want to, to need" }
             ],
             C5: [
                 { hanzi: "高", pinyin: "gāo", english: "tall" },
@@ -327,9 +333,11 @@
                 { hanzi: "巧", pinyin: "qiǎo", english: "coincidental" },
                 { hanzi: "教室", pinyin: "jiàoshì", english: "classroom" },
                 { hanzi: "外", pinyin: "wài", english: "outer/outside" },
-                { hanzi: "最", pinyin: "zuì", english: "most" }
+                { hanzi: "最", pinyin: "zuì", english: "most" },
+                { hanzi: "着", pinyin: "zhe", english: "(grammar)" }
             ],
             C6: [
+                { hanzi: "有空(儿)", pinyin: "yǒu kòng(r)", english: "free, have time" },
                 { hanzi: "生日", pinyin: "shēngrì", english: "birthday" },
                 { hanzi: "快乐", pinyin: "kuàilè", english: "happy" },
                 { hanzi: "过", pinyin: "guò", english: "to celebrate" },
@@ -345,7 +353,9 @@
                 { hanzi: "祝", pinyin: "zhù", english: "to wish" },
                 { hanzi: "难", pinyin: "nán", english: "difficult" },
                 { hanzi: "希望", pinyin: "xīwàng", english: "to hope" },
-                { hanzi: "打开", pinyin: "dǎkāi", english: "to open/turn on" }
+                { hanzi: "打开", pinyin: "dǎkāi", english: "to open/turn on" },
+                { hanzi: "当然", pinyin: "dāngrán", english: "of course" },
+                { hanzi: "叫外卖", pinyin: "jiào wàimài", english: "to order a takeaway" }
             ],
             C7: [
                 { hanzi: "生病", pinyin: "shēngbìng", english: "to be sick" },
@@ -364,7 +374,8 @@
                 { hanzi: "怎么", pinyin: "zěnme", english: "how come" },
             ],
             C8: [
-                { hanzi: "票", pinyin: "piào", english: "ticket" },
+                { hanzi: "门", pinyin: "mén", english: "door" },
+		{ hanzi: "票", pinyin: "piào", english: "ticket" },
                 { hanzi: "音乐", pinyin: "yīnyuè", english: "music" },
                 { hanzi: "会", pinyin: "huì", english: "conference" },
                 { hanzi: "超市", pinyin: "chāoshì", english: "supermarket" },
@@ -378,7 +389,9 @@
                 { hanzi: "从小", pinyin: "cóngxiǎo", english: "from childhood" },
                 { hanzi: "有意思", pinyin: "yǒu yìsi", english: "interesting" },
                 { hanzi: "以前", pinyin: "yǐqián", english: "before" },
-                { hanzi: "以后", pinyin: "yǐhòu", english: "after" }
+                { hanzi: "以后", pinyin: "yǐhòu", english: "after" },
+                { hanzi: "用", pinyin: "yòng", english: "to need" },
+                { hanzi: "完", pinyin: "wán", english: "to finish, to end" }
             ],
             C9: [
                 { hanzi: "打篮球", pinyin: "dǎ lánqiú", english: "play basketball" },
